# planilha_django

./: .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: planilha-ci.yml
contrib/: env-sample  env_gen.py
nginx/: nginx.conf
planilha/: conftest.py  django_assertions.py  settings.py  urls.py  wsgi.py
planilha/accounts/: forms.py  urls.py  views.py
planilha/accounts/templates/accounts/: change-password.html  login.html  register.html
planilha/accounts/tests/: test_accounts.py
planilha/core/: admin.py  context_processors.py  forms.py  models.py  months.py  urls.py  views.py
planilha/core/migrations/: 0001_initial.py  0002_auto_20201005_1707.py  0002_auto_20201010_2058.py  0003_merge_20201010_2100.py  0004_income.py  0005_income_save_percent.py  0006_auto_20201115_0009.py  0007_auto_20201126_1827.py  0008_auto_20201126_1844.py  0009_auto_20201129_0113.py  0010_auto_20201129_2332.py  0011_auto_20201129_2332.py  0012_spent_fixed_account.py  0013_auto_20201220_2110.py  0014_remove_spent_date.py  0015_auto_20201229_1507.py
planilha/core/static/css/: style.css
planilha/core/templates/: base.html
planilha/core/templates/components/: field-error.html  field.html  footer.html  form-error.html  messages.html  navbar.html
planilha/core/templates/core/: home.html  login.html  modal-create-spent.html  (+4 more)
planilha/core/templatetags/: month_tags.py
planilha/core/tests/: test_home.py  test_income.py  test_login_logout.py  test_spent.py
