[tool.poetry]
name = "planilha_django"
version = "0.1.0"
description = "Simples Planilha Para Controle De Gastos"
authors = ["Pbezerra-dev <herbetyp@gmail.com>"]
license = "AGPL-3.0-only"

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.1.2"
psycopg2-binary = "^2.8.6"
python-decouple = "^3.3"
dj-database-url = "^0.5.0"
django-widget-tweaks = "^1.4.8"

[tool.poetry.dev-dependencies]
ipython = "^7.18.1"
django-extensions = "^3.0.9"
django-debug-toolbar = "^3.1.1"
pre-commit = "^2.7.1"
flake8 = "^3.8.4"
pytest = "^6.1.0"
pytest-django = "^3.10.0"
black = {version = "^20.8b1", allow-prereleases = true}
codecov = "^2.1.9"
pytest-cov = "^2.10.1"
model_bakery = "^1.1.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
